force-app/main/default/objects/BMCServiceDesk__Incident_Change_Link__c/BMCServiceDesk__Incident_Change_Link__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data linking between incidents and changes.</description>
    <label>Incident Change Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Change Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>