force-app/main/default/objects/BMCServiceDesk__Incident_Change_Link__c/fields/BMCServiceDesk__FKChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange__c</fullName>
    <description>This field stores the foreign key value of the linked change</description>
    <label>Change</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>Linked Incidents</relationshipLabel>
    <relationshipName>Incident_Change_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>