force-app/main/default/objects/BMCServiceDesk__Incident_Change_Link__c/fields/BMCServiceDesk__FKClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the client reference of the parent incident record when client is a user.</description>
    <inlineHelpText>Stores the client reference of the parent incident record when client is a user.</inlineHelpText>
    <label>Client - User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Link_Client_User</relationshipName>
    <type>Lookup</type>
</CustomField>