force-app/main/default/objects/BMCServiceDesk__Incident_Change_Link__c/fields/BMCServiceDesk__FKIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKIncident__c</fullName>
    <description>This field stores the foreign key value of the linked incident</description>
    <label>Incident</label>
    <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
    <relationshipLabel>Linked Change Requests</relationshipLabel>
    <relationshipName>Incident_Change_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>